Added total donations

--- a/index.html
+++ b/index.html
@@ -37,7 +37,10 @@
       <a href="http://hypernova.pw">Hypernova</a> images used with permission
     </p>
     <p>
-      This App is free with no ads. LTC donations appreciated
+      This App is free with no ads, LTC donations appreciated.
+    </p>
+    <p>
+      Total donations: 0 LTC
     </p>
     <p>
       <strong>LQeEAkZtS7nnNi2WHX9Q3Yes6oykPcKX28</strong>
